YML file correction

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,5 @@
 image: node:latest
 
-include:
-  - template: Code-Quality.gitlab-ci.yml
-
 stages:
   - build
   - deploy
@@ -30,4 +27,4 @@ pages:
     paths:
     - public
   only:
-  - develop
+  - master
