--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "react",
+  "name": "OLCP",
   "version": "1.0.0",
+  "homepage": "https://ybouaanani.gitlab.io",
   "description": "React example starter project",
   "keywords": [
     "react",
