--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "OLCP",
+  "name": "OLCP_project",
   "version": "1.0.0",
-  "homepage": "https://ybouaanani.gitlab.io",
-  "description": "React example starter project",
-  "keywords": [
-    "react",
-    "starter"
-  ],
-  "main": "src/index.js",
+  "homepage": ".",
   "dependencies": {
     "@material-ui/core": "4.9.9",
     "@material-ui/icons": "4.9.1",
